fix car img as background in order to always being half visible

--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -36,9 +36,9 @@
   padding-top: 180px;
   min-height: 900px;
   background:
-   url("../img/01-main-page/benefits-car-bg2.png") no-repeat  center 715px,
+   url("../img/01-main-page/benefits-car-bg2.png") no-repeat  center bottom -155px,
    url("../img/01-main-page/benefits-bg.jpg") no-repeat center;
-  background-size: 50%, cover;
+  background-size: 683px 310px, cover;
 }
 
 .main__contacts {
